feat: confirmation before final payment of donation (#20)

--- a/challenge-react/public/css/main.css
+++ b/challenge-react/public/css/main.css
@@ -1,21 +1,85 @@
 :root {
   --sanSerifFamily: 'Kanit', Arial, Helvetica, sans-serif;
   --serifFamily: 'Taviraj', Georgia, 'Times New Roman', Times, serif;
+  --tamboonDarkOrchid: #2e0f3e;
   --tamboonOrchid: #9932cc;
   --tamboonOrchidFocused: #ba55d3;
-  --tamboonPaleOrchid: #f5d6f4;
-  --tamboonGray: #687389;
+  --tamboonPaleOrchid: #fcf5fc;
+  --tamboonGray: #677289;
+  --tamboonDarkGray: #4d5566;
   --shadowGray: rgba(128, 128, 128, 0.4);
   font-family: var(--sanSerifFamily);
-  color: var(--tamboonGray);
+  color: var(--tamboonDarkGray);
 }
 
-html {
-  width: 100%;
+/* :::: Common ::::::::::: */
+
+/* Bordered Button */
+
+.borderedButton {
+  font-family: var(--sanSerifFamily);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 2px;
+  padding: 4px 8px;
+  cursor: pointer;
 }
 
-body {
+.borderedButton:hover {
+  box-shadow: -1px 1px 3px var(--shadowGray);
+}
+
+.borderedButton:focus {
+  box-shadow: -1px 1px 3px var(--shadowGray);
+}
+
+.primaryButton {
+  background-color: var(--tamboonOrchid);
+  border: 0;
+  height: 30px;
+  color: white;
+}
+
+.primaryButton:focus {
+  background-color: var(--tamboonOrchidFocused);
+}
+
+.secondaryButton {
+  background-color: white;
+  border-color: var(--tamboonOrchid);
+  color: var(--tamboonOrchid);
+}
+
+.closeOverlayButton {
+  cursor: pointer;
+}
+
+/* Modal */
+
+.modalScrim {
+  position: fixed;
   width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.modalScrim[data-hascolor='true'] {
+  background-color: rgba(40, 40, 40, 0.7);
+}
+
+.modal {
+  width: 90vw;
+  max-width: 600px;
+  height: 30vh;
+  max-height: 400px;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: -1px 1px var(--shadowGray);
 }
 
 .mainHeader {
@@ -37,6 +101,30 @@ body {
   font-weight: 200;
   font-size: 140%;
   color: var(--tamboonOrchid);
+}
+
+.gratitudeMessageContainer {
+  width: 100%;
+  height: 24px;
+  margin-bottom: max(6vw, 10px);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.gratitudeMessage {
+  width: 90vw;
+  max-width: 600px;
+  height: 100%;
+  border-radius: 4px;
+  background-color: var(--tamboonPaleOrchid);
+  color: var(--tamboonOrchidFocused);
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .cardGrid {
@@ -104,20 +192,6 @@ body {
   font-weight: 700;
 }
 
-.donateButton {
-  font-family: var(--sanSerifFamily);
-  background-color: white;
-  border: 1px solid var(--tamboonOrchid);
-  border-radius: 2px;
-  padding: 4px 8px;
-  color: var(--tamboonOrchid);
-  cursor: pointer;
-}
-
-.closeOverlayButton {
-  cursor: pointer;
-}
-
 .dialogContent {
   --contentHeight: calc(0.7 * var(--cardHeight));
   visibility: hidden;
@@ -182,24 +256,69 @@ body {
   align-items: center;
 }
 
-.payButton {
-  font-family: var(--sanSerifFamily);
-  background-color: var(--tamboonOrchid);
-  border: 0;
+.modalGridCell {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.modalGridCell.header {
+  font-size: 160%;
+  font-weight: 700;
+}
+
+.modalGridCell.message {
+  font-size: 120%;
+  font-weight: 500;
+}
+
+.modalGridCell.actionButtonCell {
+  justify-content: flex-end;
+}
+
+.confirmPaymentModal {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 0 max(3vw, 10px);
+  margin-top: 10vmin;
+}
+
+.confirmPaymentModal .modalGridCell.message {
+  color: var(--tamboonOrchid);
+}
+
+.confirmPaymentModal .modalGridCell.guidance {
+  font-weight: 200;
+  font-style: italic;
+}
+
+.cancelButton {
+  margin-right: max(6vw, 20px);
+}
+
+.errorAlertModal {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 0 max(3vw, 10px);
+  margin-top: 10vmin;
+}
+
+.errorAlertModal .modalGridCell.header {
+  color: var(--tamboonDarkOrchid);
+}
+
+.errorAlertModal .modalGridCell.message {
+  color: var(--tamboonDarkGray);
+}
+
+.errorAlertModal pre {
+  width: 100%;
+  padding: 10px;
   border-radius: 2px;
-  padding: 4px 8px;
-  height: 30px;
-  color: white;
-  cursor: pointer;
-}
-
-.payButton:hover {
-  box-shadow: -1px 1px 3px var(--shadowGray);
-}
-
-.payButton:focus {
-  box-shadow: -1px 1px 3px var(--shadowGray);
-  background-color: var(--tamboonOrchidFocused);
+  background-color: var(--tamboonPaleOrchid);
+  color: var(--tamboonDarkGray);
 }
 
 @media (max-width: 400px) {
@@ -208,19 +327,31 @@ body {
   }
 
   .charityName,
-  .donateButton,
-  .dialogContent,
-  .payButton {
+  .secondaryButton,
+  .borderedButton {
     font-size: 12px;
   }
 
-  .donateButton,
-  .payButton {
+  .borderedButton {
     padding: 2px 4px;
     margin-left: 4px;
   }
 
-  .payButton {
+  .primaryButton {
     height: 24px;
+  }
+
+  .donationsSoFar,
+  .paymentAmountGuidance,
+  .paymentAmountText {
+    font-size: 80%;
+  }
+
+  .paymentAmountRadioButton {
+    margin: 0 3px;
+  }
+
+  .modalGridCell > span {
+    font-size: 80%;
   }
 }
