Refactor clean up code (#29)

--- a/challenge-react/public/css/main.css
+++ b/challenge-react/public/css/main.css
@@ -1,6 +1,5 @@
 :root {
   --sanSerifFamily: 'Kanit', Arial, Helvetica, sans-serif;
-  --serifFamily: 'Taviraj', Georgia, 'Times New Roman', Times, serif;
   --tamboonDarkOrchid: #2e0f3e;
   --tamboonOrchid: #9932cc;
   --tamboonOrchidFocused: #ba55d3;
@@ -8,11 +7,14 @@
   --tamboonGray: #677289;
   --tamboonDarkGray: #4d5566;
   --shadowGray: rgba(128, 128, 128, 0.4);
+  --translucentBlack: rgba(40, 40, 40, 0.7);
+  --buttonBoxShadow: -1px 1px 3px var(--shadowGray);
+  --basicMargin: max(3vw, 10px);
+  --radiusLarge: 4px;
+  --radiusSmall: 2px;
   font-family: var(--sanSerifFamily);
   color: var(--tamboonDarkGray);
 }
-
-/* :::: Common ::::::::::: */
 
 /* Bordered Button */
 
@@ -20,17 +22,17 @@
   font-family: var(--sanSerifFamily);
   border-width: 1px;
   border-style: solid;
-  border-radius: 2px;
+  border-radius: var(--radiusSmall);
   padding: 4px 8px;
   cursor: pointer;
 }
 
 .borderedButton:hover {
-  box-shadow: -1px 1px 3px var(--shadowGray);
+  box-shadow: var(--buttonBoxShadow);
 }
 
 .borderedButton:focus {
-  box-shadow: -1px 1px 3px var(--shadowGray);
+  box-shadow: var(--buttonBoxShadow);
 }
 
 .primaryButton {
@@ -62,14 +64,11 @@
   height: 100%;
   top: 0;
   left: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
 }
 
 .modalScrim[data-hascolor='true'] {
-  background-color: rgba(40, 40, 40, 0.7);
+  background-color: var(--translucentBlack);
 }
 
 .modal {
@@ -78,16 +77,13 @@
   height: 30vh;
   max-height: 400px;
   background-color: white;
-  border-radius: 2px;
-  box-shadow: -1px 1px var(--shadowGray);
+  border-radius: var(--radiusSmall);
+  box-shadow: var(--buttonBoxShadow);
 }
 
 .mainHeader {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: max(3vw, 10px);
+  margin-bottom: var(--basicMargin);
 }
 
 .headerTitle {
@@ -117,7 +113,7 @@
   width: 90vw;
   max-width: 600px;
   height: 100%;
-  border-radius: 4px;
+  border-radius: var(--radiusLarge);
   background-color: var(--tamboonPaleOrchid);
   color: var(--tamboonOrchidFocused);
   padding: 10px;
@@ -153,8 +149,8 @@
   justify-content: flex-end;
   align-items: center;
   box-shadow: -2px 2px 5px var(--shadowGray);
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-left-radius: var(--radiusLarge);
+  border-top-right-radius: var(--radiusLarge);
   /* prevents background showing outside of overlay corners */
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -166,8 +162,8 @@
   width: 100%;
   height: 30%;
   background-color: rgba(255, 255, 255, 1);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: var(--radiusLarge);
+  border-bottom-right-radius: var(--radiusLarge);
   box-sizing: border-box;
   padding: 0 3vw;
   transition: height 300ms ease-out;
@@ -209,14 +205,14 @@
 
 .dialogContentGrid {
   display: grid;
-  grid-template-rows: repeat(4 1fr);
+  grid-template-rows: 1fr 2fr 1fr;
   height: var(--contentHeight);
 }
 
-.donationsSoFar {
-  color: var(--tamboonOrchid);
-  font-weight: 200;
-  font-style: italic;
+.paymentAmountGuidance {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .paymentOptions {
@@ -231,7 +227,7 @@
   width: 10px;
   height: 10px;
   border: solid 1px var(--tamboonGray);
-  border-radius: 2px;
+  border-radius: var(--radiusSmall);
   background-color: white;
   margin: 0 5px;
 }
@@ -280,7 +276,7 @@
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: repeat(4, 1fr);
-  padding: 0 max(3vw, 10px);
+  padding: 0 var(--basicMargin);
   margin-top: 10vmin;
 }
 
@@ -297,37 +293,12 @@
   margin-right: max(6vw, 20px);
 }
 
-.errorAlertModal {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: repeat(4, 1fr);
-  padding: 0 max(3vw, 10px);
-  margin-top: 10vmin;
-}
-
-.errorAlertModal .modalGridCell.header {
-  color: var(--tamboonDarkOrchid);
-}
-
-.errorAlertModal .modalGridCell.message {
-  color: var(--tamboonDarkGray);
-}
-
-.errorAlertModal pre {
-  width: 100%;
-  padding: 10px;
-  border-radius: 2px;
-  background-color: var(--tamboonPaleOrchid);
-  color: var(--tamboonDarkGray);
-}
-
 @media (max-width: 400px) {
   .cardFrontOverlay[data-open='true'] .overlayTitle {
     height: calc(0.25 * var(--cardHeight));
   }
 
   .charityName,
-  .secondaryButton,
   .borderedButton {
     font-size: 12px;
   }
@@ -341,7 +312,6 @@
     height: 24px;
   }
 
-  .donationsSoFar,
   .paymentAmountGuidance,
   .paymentAmountText {
     font-size: 80%;
